--- a/en/design-thinking/practica1.html
+++ b/en/design-thinking/practica1.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Introduction to Design Thinking</p>
-                    <p class="think__details__info__cont">In this first part we will cover the first objective of this methodology that is to acquire basic knowledge about the users and about the current situation and the problems that you face. For this reason, in this document you will find the two problems that the group found as a flaw in the Institute. Superior TECSUP.</p><a href="https://drive.google.com/file/d/1l_2Z2wYKPL4XytL_t37U4rbOWxoIYxFU/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento</a>
+                    <p class="think__details__info__cont">Here we can see the follow-up that was done to develop before making our proposal on the manufacture of LED lamps, which will have a positive effect depending on the type of public to which it is dedicated.</p><a href="https://drive.google.com/open?id=1b0lstbUes_lW8iL-tbd433XI7ob72X-C">Documento</a>
 
                     
                 </div>
