--- a/proyecto-final/semana1.html
+++ b/proyecto-final/semana1.html
@@ -59,26 +59,20 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Diagrama de Gant - Bosquejo - Descomposición Funcional</p>
-                    <p class="think__details__info__cont">En este archivo podremos visualizar el diseño previo a su fabricacion teniendo en cuenta que las medidas sean correctas al momento de elaborar las piezas.</p>
+                    <p class="think__details__info__title">Nuestra Propuesta de Proyecto y Diagrama de Gantt</p>
+                    <p class="think__details__info__cont">En esta seccion se visualizara la elección de nuestro proyecto y que esta cumpla con los requerimientos correctamente.</p>
                 </div>
-
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Diagrama de Gant</p>
                     <p class="think__details__extra__description">El diagrama de Gantt es una herramienta gráfica cuyo objetivo es exponer el tiempo de dedicación previsto para diferentes tareas o actividades a lo largo de un tiempo total determinado; en este caso lo utilizaremos para poner en marcha el proyecto del sistema de seguridad.</p>
-                    <a href="https://drive.google.com/file/d/1oWtL5qB9TuM4tY1GiGK4lFBtQJbUiG-b/view?usp=sharing" target="_blank">Archivo - Diagrama de Gant</a>
+                    <a href="https://drive.google.com/open?id=1cP7c44BldwXAR1_8154-nvtBUBBhR2VO" target="_blank">Archivo - Diagrama de Gant</a>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Bosquejo Inicial</p>
-                    <p class="think__details__extra__description">El bosquejo supone el primer paso concreto de la obra, es decir, la primera materialización de la idea del autor. En este caso el primer diseño del prototipo del posible circuito y el funcionamiento de la cámara.</p>
-                    <a href="https://drive.google.com/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Documento - Bosquejo Inicial</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Descomposición Funcional</p>
-                    <p class="think__details__extra__description">La descomposición funcional se refiere ampliamente al proceso de resolución de una relación funcional en sus partes constituyentes, de tal manera que la función original se puede reconstruir (es decir, recompuestos) de las partes en función de la composición.
+                    <p class="think__details__extra__title">Eleccion de Nuestra Propuesta de Proyecto</p>
+                    <p class="think__details__extra__description">Realizamos la elección de nuestro proyecto cumpliendo los requerimientos de cada actividad.
                     <br>
-                    En el proyecto se aplicó para poder reconocer los componentes y saber acerca de cada uno de ellos, así como se da su funcionamiento.</p>
-                    <a href="https://drive.google.com/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Documento - Bosquejo Inicial</a>
+                    </p>
+                    <a href="https://drive.google.com/open?id=1q6TV-Mw4yBo7VJGMRsAzjhFFfVJuGq1v" target="_blank">Documento - Bosquejo Inicial</a>
                 </div>
             </div>
         </div>
