--- a/en/final-project/semana1.html
+++ b/en/final-project/semana1.html
@@ -58,25 +58,20 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Gant Diagram - Sketch - Functional Decomposition</p>
-                    <p class="think__details__info__cont">In this file it will be possible to visualize the use of the techniques to be able to start implementing the project of the security system from a mobile application based on the research carried out by the members of the group.</p>
+                    <p class="think__details__info__title">Our Project Proposal and Gantt Chart</p>
+                    <p class="think__details__info__cont">In this section the choice of our project is displayed and it fulfills the requirements correctly.</p>
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Gant Diagram</p>
                     <p>The Gantt chart is a graphical tool whose objective is to expose the expected dedication time for different tasks or activities over a given total time; in this case we will use it to start up the security system project.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1oWtL5qB9TuM4tY1GiGK4lFBtQJbUiG-b" target="_blank">Archive - Gant's diagram</a></div>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1cP7c44BldwXAR1_8154-nvtBUBBhR2VO" target="_blank">Archive - Gant's diagram</a></div>
                 </div>
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">Initial Draft</p>
-                    <p>The sketch represents the first concrete step of the work, that is, the first materialization of the author's idea. In this case the first prototype design of the possible circuit and the operation of the camera.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Document - Initial Draft</a></div>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">Functional Decomposition</p>
-                    <p>Functional decomposition refers broadly to the process of solving a functional relation in its constituent parts, in such a way that the original function can be reconstructed (ie, recomposed) of the parts according to the composition. <br>
-                    In the project was applied to recognize the components and know about each of them, as well as its operation.</p>
-                    <div class="think__details__extra__description"><a href="https://drive.google.com/a/tecsup.edu.pe/file/d/1hZ4Z6VsdqTRH8EXqzxkvn5ZJxHyoEOk5/view?usp=sharing" target="_blank">Document - Functional Decomposition</a></div>
+                    <p class="think__details__extra__title">Choice of our Project Proposal</p>
+                    <p>We make the choice of our project fulfilling the requirements of each activity.<br>
+                    </p>
+                    <div class="think__details__extra__description"><a href="https://drive.google.com/open?id=1q6TV-Mw4yBo7VJGMRsAzjhFFfVJuGq1v" target="_blank">Document - Choice of our Project Proposal</a></div>
                 </div>
             </div>
         </div>
