--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -55,26 +55,15 @@
 
         <div class="think">
             <div class="think__img">
-                <iframe width="560" height="315" src="https://www.youtube.com" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/sa6NlNtQo8c" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-speech-streamline-talk-user"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo</p>
-                </div>
-
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1K4NFkj3El4lRBq5SVDEvw3mak2-1AWdu/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - Respuestas</a>
-                </div>
-                <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1PHGLUB1CPTJZH-x0X2J5i2ZnAt8MoD09/view?usp=sharing" target="_blank">Documento - Respuestas Encuesta</a>
+                    <p class="think__details__info__title">Design Thinking</p>
+                    <p class="think__details__info__cont">Realizamos las metodologias usadas frecuentemente en el Design Thinking en el desarrollo de nuestro proyecto de lamparas LED con acrilico.</p>
                 </div>
             </div>
         </div>
