--- a/design-thinking/practica3.html
+++ b/design-thinking/practica3.html
@@ -62,18 +62,16 @@
                     <i class="icon-chaplin-hat-movie-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo</p>
+                    <p class="think__details__info__title">Empatizamos</p>
+                    <p class="think__details__info__cont">Realizamos los pasos seguidos en el tema de Empatixar para desarrollar nuestro proyecto con total exito.</p>
                     <ul>
-                        <li>...</li>
-                        <li>...</li>
                     </ul>
                 </div>
 
                 <div class="think__details__extra">
                     <p class="think__details__extra__title">Título</p>
                     <p>En Desarrollo</p>
-                    <a href="https://drive.google.com/file/d/1VQpyhALGp81_hI5rsUCHyqvt4IdeDS9C/view?usp=sharing" target="_blank" class="think__details__extra__description">Documento - BrainStorm - 7 Sombreros</a>
+                    <a href="https://drive.google.com/open?id=1IG-9r4DSwiQXrhSlOli6X_NLich0UxHL" target="_blank" class="think__details__extra__description">Documento - BrainStorm - 7 Sombreros</a>
                 </div>
             </div>
         </div>
