--- a/design-thinking/practica2.html
+++ b/design-thinking/practica2.html
@@ -63,7 +63,8 @@
                 </div>
                 <div class="think__details__info">
                     <p class="think__details__info__title">Design Thinking</p>
-                    <p class="think__details__info__cont">Realizamos las metodologias usadas frecuentemente en el Design Thinking en el desarrollo de nuestro proyecto de lamparas LED con acrilico.</p>
+                    <p class="think__details__info__cont">Realizamos las metodologias usadas frecuentemente en el Design Thinking en el desarrollo de nuestro proyecto de lamparas LED con acrilico.</p><a href="https://drive.google.com/open?id=1b0lstbUes_lW8iL-tbd433XI7ob72X-C">Documento</a>
+                </div>
                 </div>
             </div>
         </div>
