--- a/proyecto-final/semana2.html
+++ b/proyecto-final/semana2.html
@@ -49,24 +49,28 @@
                 <h1>Desarrollo de Planos 2D y/o 3D</h1>
             </div>
         </div>
-
-        <div class="think">
+<div class="think">
             <div class="think__img">
-                <img src="../img/calculo.png" alt="">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Y_gt7C68uKs" frameborder="0" allowfullscreen></iframe>
+            </div>
             </div>
             <div class="think__details">
                 <div class="think__details__icon">
                     <i class="icon-settings-streamline"></i>
                 </div>
                 <div class="think__details__info">
-                    <p class="think__details__info__title">Título</p>
-                    <p class="think__details__info__cont">En Desarrollo.</p>
+                    <p class="think__details__info__title">Diseño de Planos</p>
+                    <p class="think__details__info__cont">Aqui se mostrara los primeros diseños tanto de la base como de nuestros grabados que seran realizados para nuestra lampara acrilica.</p>
                 </div>
-
                 <div class="think__details__extra">
-                    <p class="think__details__extra__title">...</p>
-                    <p class="think__details__extra__description">En Desarrollo.</p>
-                    <a href="https://drive.google.com/file/d/1PGROxso1_vc_G8KD01LdhZqrysH_weuA/view?usp=sharing" target="_blank">Documento - Cálculos Basado al diseño</a>
+                    <p class="think__details__extra__title">Planos en 2D y 3D en AutoCAD.</p>
+                    <p class="think__details__extra__description">Con el uso del Software AutoCAD realizamos un primer plano de lo que sera nuestra base y laminas de esta manera se podra entender mejor el diseño del proyecto.</p>
+                    <a href="https://drive.google.com/open?id=1hRNwAntPGr6DpjdnLUHDk0NsheobDe6j" target="_blank">Documento - Cálculos Basado al diseño</a>
+                </div>
+                <div class="think__details__extra">
+                    <p class="think__details__extra__title">Diseños e informe</p>
+                    <p class="think__details__extra__description">Aqui compartimos los diseños previos al desarrollo del taller y damos a conocer un poco mas de las caracteristicas de nuestro producto que lo hacen flexible a cambios.</p>
+                    <a href="https://drive.google.com/open?id=1WTP9xU8DAbbu3OnSeCLlIfYnjpJBG8Qy" target="_blank">Documento - Cálculos Basado al diseño</a>
                 </div>
             </div>
         </div>
